Fix: Wrong module name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     ],
     "extra": {
         "zf": {
-            "module": "Landingpages"
+            "module": "Sitemap"
         }
     },
     "autoload": {
