--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,20 @@
         "seo"
     ],
     "require": {
-        "yawik/core": "^0.33",
-        "yawik/jobs": "^0.33",
-        "samdark/sitemap": "^2.2"
+        "yawik/core": "^0.34",
+        "yawik/jobs": "^0.34",
+        "samdark/sitemap": "^2.2",
+        "laminas/laminas-dependency-plugin": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "cross-solution/phpunit-utils": "2.0.x-dev",
+        "cross-solution/phpunit-utils": "^2.0",
         "yawik/composer-plugin": "^1.0",
-        "yawik/auth": "^0.33",
-        "yawik/settings": "^0.33",
-        "yawik/applications": "^0.33",
-        "yawik/cv": "^0.33",
-        "yawik/organizations": "^0.33",
+        "yawik/auth": "^0.34",
+        "yawik/settings": "^0.34",
+        "yawik/applications": "^0.34",
+        "yawik/cv": "^0.34",
+        "yawik/organizations": "^0.34",
         "yawik/geo": "^1.0"
     },
     "license": "MIT",
