--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,19 @@
         "seo"
     ],
     "require": {
-        "yawik/core": "^0.34",
-        "yawik/jobs": "^0.34",
-        "samdark/sitemap": "^2.2",
-        "laminas/laminas-dependency-plugin": "^1.0"
+        "yawik/core": "^0.35",
+        "yawik/jobs": "^0.35",
+        "samdark/sitemap": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "cross-solution/phpunit-utils": "^2.0",
-        "yawik/composer-plugin": "^1.0",
-        "yawik/auth": "^0.34",
-        "yawik/settings": "^0.34",
-        "yawik/applications": "^0.34",
-        "yawik/cv": "^0.34",
-        "yawik/organizations": "^0.34",
+        "yawik/composer-plugin": "^3.0",
+        "yawik/auth": "^0.35",
+        "yawik/settings": "^0.35",
+        "yawik/applications": "^0.35",
+        "yawik/cv": "^0.35",
+        "yawik/organizations": "^0.35",
         "yawik/geo": "^1.0"
     },
     "license": "MIT",
