--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "yawik-sitemap",
-  "version": "0.1.0",
+  "license": "MIT",
+  "repository": "git@github.com:yawik/sitemap.git",
   "scripts": {
     "postinstall": "grunt"
   },
   "private": false,
   "devDependencies": {
-    "yawik-core": "test/sandbox/public/modules/Core",
-    "grunt": "^1.0.3",
+    "grunt": "^1.3.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "load-grunt-tasks": "^4.0.0"
+    "load-grunt-tasks": "^4.0.0",
+    "yawik-core": "test/sandbox/public/modules/Core"
   }
 }
